--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,5 @@
 {
     "require": {
-        "slim/slim": "^3.0",
-        "monolog/monolog": "^1.23",
-        "pusher/pusher-php-server": "^3.0",
-        "authorizenet/authorizenet": "~1.9.6",
-        "memcachier/php-memcache-sasl": ">=1.0.1"
+        "pusher/pusher-php-server": "^3.0"
     }
 }
